--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,12 @@ Package: minTEMU
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R:
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+    person("Claudiu", "Forgaci", , "C.Forgaci@tudelft.nl", role = c("aut", "cre"),
+    comment = c(ORCID = "YOUR-ORCID-ID")),
+    
+    person("Aleksandra", "Wilczynska", , "A.E.Wilczynska@tudelft.nl", role = c("aut"),
+    comment = c(ORCID = "0000-0001-9323-0267"))
+    
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 ByteCompile: true
@@ -10,6 +15,13 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
-Imports: here
+Imports: here,
+    base (>= 4.2.0),
+    jsonlite (>= 1.8.4),
+    knitr (>= 1.41),
+    renv (>= 0.16.0),
+    rmarkdown (>= 2.18),
+    tools (>= 4.2.0),
+    utils (>= 4.2.0)
 Suggests: devtools,
     git2r
