--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    ggplot2,
     here,
     reticulate,
     tidygeocoder
