--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(geocode_thesis_locations)
 export(head_text)
 export(thesis_stopwords)
 export(urbanism_stopwords)
+export(visualize_thesis_locations)
