Add functions to calculate top n words

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(convert_pdf_text)
 export(find_meta_stopwords)
 export(head_text)
 export(thesis_stopwords)
+export(top_n_word_count_per_corpus)
+export(top_n_word_count_per_document)
 export(urbanism_stopwords)
