--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(clean_basic)
 export(convert_pdf_text)
+export(document_stopwords)
 export(find_meta_stopwords)
 export(head_text)
-export(thesis_stopwords)
-export(urbanism_stopwords)
+export(subject_stopwords)
