--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,4 +29,7 @@ Imports:
     here,
     reticulate,
     tidygeocoder
-Suggests: devtools
+Suggests: 
+    devtools,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
