add short words function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(geocode_thesis_locations)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(head_text)
+export(short_words)
 export(thesis_stopwords)
 export(urbanism_stopwords)
 export(visualize_thesis_locations)
