--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(find_meta_stopwords)
 export(geocode_thesis_locations)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
+export(get_topics)
 export(head_text)
 export(short_words)
 export(thesis_stopwords)
