run app as a part of a package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: minTEMU
+Package: mintEMU
 Title: The Legacy of the European Postgraduate Master in Urbanism at TU Delft: A Text Mining Approach
 Version: 0.0.0.9000
 Authors@R: c(
