--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Data
 analysis/data/
 analysis/nul
+data/
 
 #Paper
 analysis/paper/paper_*
@@ -13,3 +14,4 @@ analysis/paper/paper_*
 inst/python/pyvenv
 
 .DS_Store
+
