added functions for special letters; tests of new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ export(short_words)
 export(thesis_stopwords)
 export(urbanism_stopwords)
 export(visualize_thesis_locations)
+export(word_vec_combos)
