adapt normalised words function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(geocode_thesis_locations)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(head_text)
+export(normalise_words)
 export(run_mintEMU_app)
 export(short_words)
 export(thesis_stopwords)
