--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convert_pdf_text)
 export(convert_to_dtm)
 export(find_meta_stopwords)
 export(geocode_thesis_locations)
+export(get_tf_idf)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(head_text)
