changes to replcements checker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(head_text)
 export(normalise_words)
+export(replacement_checker)
 export(run_mintEMU_app)
 export(short_words)
 export(thesis_stopwords)
