--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(convert_to_dtm)
 export(find_meta_stopwords)
 export(geocode_thesis_locations)
 export(get_ngrams)
+export(get_number_of_topics)
 export(get_tf_idf)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(get_top_words_per_topic)
 export(get_topics)
 export(head_text)
+export(name_topics)
 export(run_mintEMU_app)
 export(short_words)
 export(thesis_stopwords)
