--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,11 @@ Authors@R: c(
            role    = c("aut"),
            comment = c(ORCID = "0000-0001-9323-0267")
            )
+    person(given   = "Dilara Selin",
+           family  = "Kubilay", 
+           email   = "D.S.Kubilay@tudelft.nl",
+           role    = c("ctb")
+           )
            )
 Description: This package is a research compendium produced with the `rrtools`
     package containing the paper and code of "The Legacy of the European post-Master 
