Add tokenize function to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(run_mintEMU_app)
 export(short_words)
 export(slide_windows)
 export(thesis_stopwords)
+export(tokenize)
 export(urbanism_stopwords)
 export(visualise_first_n_components)
 export(visualize_thesis_locations)
