Add visualise_lda function to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(thesis_stopwords)
 export(tokenize)
 export(urbanism_stopwords)
 export(visualise_first_n_components)
+export(visualise_lda)
 export(visualize_thesis_locations)
 export(word_vec_combos)
 importFrom(magrittr,"%>%")
