Rename visualise_lda() function to vis_lda()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(short_words)
 export(thesis_stopwords)
 export(tokenize)
 export(urbanism_stopwords)
-export(visualise_lda)
+export(vis_lda)
 export(visualize_thesis_locations)
 export(word_vec_combos)
 importFrom(magrittr,"%>%")
