Update analysis functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_top_words_per_document)
 export(get_top_words_per_topic)
 export(get_topic_proportions)
 export(get_topics)
+export(get_word_counts)
 export(head_text)
 export(name_topics)
 export(normalise_words)
@@ -28,6 +29,8 @@ export(thesis_stopwords)
 export(tokenize)
 export(urbanism_stopwords)
 export(vis_lda)
+export(vis_top_words_per_corpus)
+export(vis_top_words_per_topic)
 export(visualize_thesis_locations)
 export(word_vec_combos)
 importFrom(magrittr,"%>%")
