--- a/.github/workflows/render-in-docker.yaml
+++ b/.github/workflows/render-in-docker.yaml
@@ -4,7 +4,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@master
+     - name: Checkout repository
+       uses: actions/checkout@master
      - name: Build the Docker image
        run: docker build . --file Dockerfile
-
+     - name: Upload rendered paper
+         uses: actions/upload-artifact@v4
+         with:
+           name: rendered-paper
+           path: analysis/paper/paper.html
