--- a/.github/workflows/render-in-docker.yaml
+++ b/.github/workflows/render-in-docker.yaml
@@ -12,4 +12,4 @@ jobs:
        uses: actions/upload-artifact@v4
        with:
          name: rendered-paper
-         path: analysis/paper/paper.html
+         path: /mintEMU/analysis/paper/paper.html
