Add new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(convert_pdf_text)
 export(convert_to_dtm)
 export(count_docs_per_topic)
 export(find_meta_stopwords)
+export(fit_lda)
 export(geocode_thesis_locations)
+export(get_max_topic_per_doc)
 export(get_ngrams)
 export(get_number_of_topics)
 export(get_tf_idf)
@@ -25,9 +27,11 @@ export(normalise_words)
 export(replacement_checker)
 export(run_mintEMU_app)
 export(short_words)
+export(tbl_var_overview)
 export(thesis_stopwords)
 export(tokenize)
 export(urbanism_stopwords)
+export(vis_dom_topic_distr)
 export(vis_lda)
 export(vis_top_words_per_corpus)
 export(vis_top_words_per_topic)
