--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_max_topic_per_doc)
 export(get_ngrams)
 export(get_number_of_topics)
 export(get_tf_idf)
+export(get_theses_overview)
 export(get_top_words_per_corpus)
 export(get_top_words_per_document)
 export(get_top_words_per_topic)
